--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
   </div>
 
-  <div style="width: 70%; margin: auto; padding: 20px 0; background-color: aliceblue;">
+  <div class="center-screen">
     <h1>Quicks Dice</h1>
     <p><a href="javascript:void(0)" class="open-rules">Rules</a></p><br>
     <div class="button button-small" onclick="toggleNumbers()" id="toggle">Switch to Numbers</div><br>
